# LACPass-trusted-list

./: .dockerignore  .example.env  .example.env.dev  .example.env.dev.sh  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose-dbs.yml  docker-compose-dev.yml  docker-compose-image.yml  docker-compose.yml  docker_postgres_init.sql  example.env.dev.sh
docs/: API-Guide.md
docs/tech/: configuration.md  migrations.md
src/: config.rs  controllers.rs  dto.rs  entities.rs  jobs.rs  logger_config.rs  main.rs  migration.rs  responses.rs  services.rs
src/config/: env_config.rs
src/controllers/: certificate_controller.rs  config.rs  index.rs  public_key_controller.rs
src/databases/: pool.rs
src/dto/: raw.rs  response.rs  utils.rs
src/dto/response/: hc1_response_dto.rs  public_key_response_dto.rs
src/entities/: entities.rs  models.rs  pd_did_member.rs
src/entities/did/: model.rs  select.rs
src/entities/pd_did_member/: model.rs  select.rs
src/entities/pd_member/: model.rs  select.rs
src/entities/public_directory/: model.rs  select.rs
src/entities/public_key/: model.rs  select.rs
src/jobs/: index.rs  trusted_registries.rs  trusted_registry.rs
src/migration/: index.rs  m20230617_195505_public_directory.rs  m20230622_011005_did.rs  m20230622_035815_pd_member.rs  m20230622_044839_pd_did_member.rs  m20230623_215702_public_key.rs
src/responses/: error_message.rs  generic_response.rs  success_messages.rs
src/services/: certificate_service.rs  did.rs  pd_member.rs  public_directory.rs  public_key.rs  trusted_registry.rs  validator.rs  x509.rs
src/services/did/: abi.json  contract_interface.rs  data_interface.rs  did_registry_worker_service.rs  did_service.rs  index.rs
src/services/pd_did_member/: data_interface.rs
src/services/pd_member/: data_interface.rs
src/services/public_directory/: abi.json  contract_interface.rs  country_code.rs  data_interface.rs  index.rs  member_data.rs  public_directory_worker_service.rs
src/services/public_key/: data_interface.rs  source_1_worker_service.rs
src/services/trusted_registry/: core_worker.rs  trusted_registry.rs
src/services/validator/: certificate_error.rs  certificate_service.rs
src/services/web3/: event.rs  utils.rs
src/services/x509/: x509_utils.rs
src/utils/: constants.rs  utils.rs
