[package]
name = "lacpass-trusted-list"
version = "0.1.0"
edition = "2021"
authors = ["Erick <eum602@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.118", features = ["derive"] }
log = "0.4.16"
async-trait = { version = "0.1" }
env_logger = "0.9.0"
chrono = "0.4.19"
anyhow = "1.0.58"
clap = "3.2.8"
tokio = { version = "1.28.2" }
web3 = { version = "0.18.0", default-features = false, features = ["http-rustls-tls"] }
serde_json = "1.0.39"
sha3 = "0.10"
sea-orm = { version = "0.11.3", features = ["runtime-tokio-native-tls", "sqlx-postgres"]}
hex = "0.4"
bs58 = "0.5.0"
rust-crypto = "0.2"

[dependencies.sea-orm-rocket]
version = "0.5.2"

[dependencies.sea-orm-migration]
version = "0.11.3"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  #"runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  #"sqlx-postgres",         # `DATABASE_DRIVER` feature
]

[dependencies.rocket_okapi]
version = "0.8.0-rc.3"
features = ["swagger", "rapidoc"]

[dependencies.indexmap]
version = "1.8.2"

[dependencies.rocket_cors]
git = "https://github.com/lawliet89/rocket_cors.git"
rev = "54fae070"
default-features = false

[dependencies.figment]
version = "0.10.8"

[dependencies.yansi]
version = "0.5.1"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4"
]
